--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.abdosharaf.paymentstracker">
 
     <application
+        android:name=".di.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,20 +15,17 @@
         android:theme="@style/Theme.PaymentsTracker"
         tools:targetApi="31">
         <activity
-            android:name="com.abdosharaf.paymentstracker.ui.AddPaymentActivity"
+            android:name="com.abdosharaf.paymentstracker.ui.MainActivity"
             android:exported="true" />
         <activity
-            android:name="com.abdosharaf.paymentstracker.ui.PaymentsListActivity"
+            android:name=".ui.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.abdosharaf.paymentstracker.ui.MainActivity"
-            android:exported="true"/>
     </application>
 
 </manifest>
