--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.abdosharaf.paymentstracker">
 
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+
     <application
         android:name=".di.MyApplication"
         android:allowBackup="true"
@@ -23,9 +27,10 @@
         <activity
             android:name=".ui.home.HomeActivity"
             android:exported="true" />
+        <!-- TODO: Delete this!! -->
         <activity
             android:name=".ui.oldMain.MainActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="true">
