--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.abdosharaf.paymentstracker">
+    package="com.abdosharaf.paymentstracker" >
 
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -17,23 +17,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PaymentsTracker"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".ui.addExpense.AddExpenseActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.addIncome.AddIncomeActivity"
-            android:exported="false" />
+            android:name=".ui.addPayment.AddPaymentActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.home.HomeActivity"
-            android:exported="true" />
-        <!-- TODO: Delete this!! -->
+            android:exported="true" /> <!-- TODO: Delete this!! -->
         <activity
             android:name=".ui.oldMain.MainActivity"
             android:exported="false" />
         <activity
             android:name=".ui.splash.SplashActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
